@@ -1,3 +1,8 @@
+Sat Feb 18 14:25:51 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/preferences-page-irc.c:
+	  - Guard against bad values from gconf.
+
 Sat Feb 18 14:24:18 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* m4/intltool.m4:
